<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_TopMoldProdPar" Id="{f8ccd033-1c00-4e64-9fe7-2ff9f7159657}">
    <Declaration><![CDATA[TYPE ST_TopMoldProdPar :
STRUCT

	PositionDownStop			: REAL;
	PositionDownOpen			: REAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>